// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputChainDevtools highlights the focused entry 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Input Listeners                                                                                  │
│──────────────────────────────────────────────────────────────────────────────────────────────────│
│   1. Shell                                                                                       │
│   2. ArchiverTopic                                                                               │
│ › 3. RunDisplay                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`InputChainDevtools lists entries lowest-sequence (lowest priority) first 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Input Listeners                                                                                  │
│──────────────────────────────────────────────────────────────────────────────────────────────────│
│   1. Shell                                                                                       │
│   2. ArchiverTopic                                                                               │
│   3. RunDisplay                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`InputChainDevtools renders an empty-state placeholder with no entries 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Input Listeners                                                                                  │
│──────────────────────────────────────────────────────────────────────────────────────────────────│
│ (empty)                                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
